adjustment at mail stuff

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
 SMTP_USER=contato.afa7789@gmail.com
 SMTP_PASS=afa7789digimon12
+SMTP_COMPANY_EMAIL=afa7789@gmail.com
