--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ SMTP_PORT=465
 SMTP_USER=contato.afa7789@gmail.com
 SMTP_PASS=afa7789digimon12
 SMTP_COMPANY_EMAIL=afa7789@gmail.com
+ADMIN_LOGIN=afa7789
+ADMIN_PASSWORD=123456
