saving progress in adding database

--- a/.env
+++ b/.env
@@ -4,5 +4,11 @@ SMTP_PORT=465
 SMTP_USER=contato.afa7789@gmail.com
 SMTP_PASS=afa7789digimon12
 SMTP_COMPANY_EMAIL=afa7789@gmail.com
+
 ADMIN_LOGIN=afa7789
 ADMIN_PASSWORD=123456
+
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_NAME=
