--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,11 @@ SMTP_PORT=
 SMTP_USER=
 SMTP_PASS=
 SMTP_COMPANY_EMAIL=
+
+ADMIN_LOGIN=afa7789
+ADMIN_PASSWORD=123456
+
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_NAME=
