--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ SMTP_COMPANY_EMAIL=afa7789@gmail.com
 ADMIN_LOGIN=afa7789
 ADMIN_PASSWORD=123456
 
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
+DB_USER=site
+DB_PASSWORD=PASSWORD
+DB_HOST=localhost
 DB_NAME=
