--- a/.env
+++ b/.env
@@ -10,6 +10,6 @@ ADMIN_PASSWORD=123456
 
 DB_USER=site
 DB_PASSWORD=PASSWORD
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_NAME=gofiber_website
-DB_PORT=3307
+DB_PORT=3306
