--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ SMTP_USER=
 SMTP_PASS=
 SMTP_COMPANY_EMAIL=
 
-ADMIN_LOGIN=afa7789
-ADMIN_PASSWORD=123456
+ADMIN_LOGIN=
+ADMIN_PASSWORD=
 
 DB_USER=
 DB_PASSWORD=
